# id_doc

./: .gitignore  404.html  README.md  docker-compose.school-status.yml  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
developer/: index.html
docs/: developer.md  faq.md  index.md  notice.md  otp.md  passkey.md  security.md  status-api.md  status-data-push-guide.md  wechat.md
docs/_assets/: mermaid-init.js
docs/superpowers/plans/: 2026-05-25-school-status-api-implementation.md
docs/superpowers/specs/: 2026-05-25-school-status-api-design.md
faq/: index.html
notice/: index.html
otp/: index.html
passkey/: index.html
school_status_api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
school_status_api/config/: clients.example.yml
school_status_api/school_status_api/: auth.py  auto_importer.py  config.py  database.py  import_version.py  main.py  repository.py  runtime.py  sync.py
school_status_api/tests/: test_api.py  test_auth.py  test_auto_importer.py  test_import.py  test_import_cli.py  test_repository.py  test_sync.py
search/: search_index.json
security/: index.html
status-api/: index.html
status-data-push-guide/: index.html
wechat/: index.html
