[project]
name = "school-status-api"
version = "0.5.1"
description = "Authenticated school status query API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<1",
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["school_status_api*"]
